Add properties for prod profile